syntax = "proto3";

service StreamService {
  rpc StreamTrackById(StreamTrackRequest) returns (stream TrackData){};
}

message StreamTrackRequest {
  string track_id = 1;
}

message TrackData {
  bytes data = 1;
}
